--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.url=jdbc:postgresql://${database.endpoint:localhost:5432}/${da
 spring.flyway.schemas=sentenceplanapi
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+spring.flyway.enabled=true
+
+#spring.jpa.hibernate.ddl-auto=create
 
 #TODO: Recreate Postgres schema on error. This should be removed once schema changes are less frequent
 #spring.flyway.clean-on-validation-error=false
